[package]
name = "sharp-inject-bootstrap-native"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
netcorehost = "0.6"
widestring = "0.4"
capnp = "0.14"
capnp-rpc = "0.14"
futures = "0.3"
tokio = { version = "1.11", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.6", features = ["compat"] }

[build-dependencies]
capnpc = "0.14"

[lib]
crate-type = ["cdylib"]
